[package]
name = "bxmr"
version = "0.23.312"
edition = "2021"

authors = ["Zoom.Quiet <zoomquiet+rs@gmail.com>"]

#license = "BSD 2-Clause License"
license-file = "LICENSE"
description = "a CLI tool for managment BXM's code with rIME-Squirrel"

readme = "README.md"
homepage = "https://rs.101.so/dev/cli_bxmr.html"
repository = "https://github.com/zhrust/BXMr"
keywords = ["cli", "Chinese", "rIME", "Squirrel","generator", "YAML", "serialization","IME","input"]
categories = ["command-line-utilities","encoding","text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ...
#rustflags = ["-A", "clippy::all=off"]
[dependencies]
log = "0.4"
tracing = "0.1"
clia-tracing-config = "0.2"
#chrono = "0.4.23"
toml = "0.7.2"
yaml-rust = "0.4"

dotenv = "0.15.0"
itertools = "0.10.5"
#envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indicatif = "0.17.3"
#tokio = "1.26.0"
tokio = { version = "1.26.0", features = ["full"] }

rustyline = "11.0.0"
#csv = "1.2.0"
#clap = "4.1.6"
#clap-verbosity-flag = "2.0.0"
[dependencies.clap]
version = "4.1.6"
features = ["derive"]

#[dependencies.structopt]
#    version = "0.3"
#    default-features = false

[dev-dependencies]
#assert_cmd = "2"
#predicates = "2"
